--- a/public/index.html
+++ b/public/index.html
@@ -165,11 +165,11 @@
       <!--Sidebar section-->
       <aside class="sidebar-section">
         <img
-          width="400"
-          height="400"
+          width="330"
+          height="354"
           left="40"
           top="80"
-          src="img2.jpg"
+          src='../src/images/photo_2023-05-05_20-43-45.jpg'
           alt="my photo"
         />
         <!--contacts section-->
