--- a/public/index.html
+++ b/public/index.html
@@ -100,22 +100,24 @@
               <span class="my-projects-text">Project link</span>
               <a
                 target="_blank"
-                href="https://p1st-0n.github.io/react-hw-08-phonebook/"
+                href="https://p1st-0n.github.io/react-hw-05-movies/"
                 class="my-projects-link"
-                >PHONEBOOK</a
-              ><br />
+                >MOVIE_SEARCH</a
+              >
+              <!-- <br />
               <span class="my-projects-text">Source code</span>
               <a
                 target="_blank"
-                href="https://github.com/P1ST-0N/react-hw-08-phonebook"
+                href="https://p1st-0n.github.io/react-hw-05-movies/"
                 class="my-projects-link"
-                >https://github.com/P1ST-0N/react-hw-08-phonebook</a
+                >https://p1st-0n.github.io/react-hw-05-movies/</a
               >
 
-              <br />
-              Everything you need to manage your contacts. The application will
+              <br /> -->
+              <!-- Everything you need to manage your contacts. The application will
               help you quickly find the desired contact. Includes register and
-              login. <br />
+              login.  -->
+              <br />
               <span class="my-projects-bracket">
                 [Material-UI,React-Redux,Redux-Toolkit,Redux-Persist,Async-Thunk,Axios]</span
               >
