--- a/public/index.html
+++ b/public/index.html
@@ -148,16 +148,16 @@
               <span class="my-projects-text">Project link</span>
               <a
                 target="_blank"
-                href="https://p1st-0n.github.io/markup-hw-06"
+                href="https://p1st-0n.github.io/new-project-08/"
                 class="my-projects-link"
                 >WEB-STUDIO</a
               ><br />
               <span class="my-projects-text">Source code</span>
               <a
                 target="_blank"
-                href="https://github.com/P1ST-0N/markup-hw-06"
+                href="https://github.com/P1ST-0N/new-project-08"
                 class="my-projects-link"
-                >https://github.com/P1ST-0N/markup-hw-06</a
+                >https://github.com/P1ST-0N/new-project-08</a
               >
             </li>
           </ol>
