update my-project & deploy

--- a/public/index.html
+++ b/public/index.html
@@ -127,16 +127,16 @@
               <span class="my-projects-text">Project link</span>
               <a
                 target="_blank"
-                href="https://p1st-0n.github.io/react-hooks-hw-04-image-finder/"
+                href="https://p1st-0n.github.io/pizza-react/"
                 class="my-projects-link"
-                >PIXABAY GALLERY</a
+                >PIZZA MARKET</a
               ><br />
               <span class="my-projects-text">Source code</span>
               <a
                 target="_blank"
-                href="https://github.com/P1ST-0N/react-hooks-hw-04-image-finder"
+                href="https://github.com/P1ST-0N/pizza-react"
                 class="my-projects-link"
-                >https://github.com/P1ST-0N/react-hooks-hw-04-image-finder</a
+                >https://github.com/P1ST-0N/pizza-react</a
               ><br />
               Keyword image search app.
               <br />
