--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                 class="my-projects-link"
                 >https://github.com/P1ST-0N/pizza-react</a
               ><br />
-              Keyword image search app.
+              Application for buying pizza, used react and redux
               <br />
               <span class="my-projects-bracket">
                 [CSS3, React.js, API, Axios]</span
