--- a/public/index.html
+++ b/public/index.html
@@ -127,21 +127,21 @@
               <span class="my-projects-text">Project link</span>
               <a
                 target="_blank"
-                href="https://p1st-0n.github.io/pizza-react/"
+                href="https://p1st-0n.github.io/mini-market/"
                 class="my-projects-link"
-                >PIZZA MARKET</a
+                >SHOES STORE</a
               ><br />
               <span class="my-projects-text">Source code</span>
               <a
                 target="_blank"
-                href="https://github.com/P1ST-0N/pizza-react"
+                href="https://github.com/P1ST-0N/mini-market"
                 class="my-projects-link"
-                >https://github.com/P1ST-0N/pizza-react</a
+                >https://github.com/P1ST-0N/mini-market</a
               ><br />
-              Application for buying pizza, used react and redux
+              Application for buying shoes, used react and redux
               <br />
               <span class="my-projects-bracket">
-                [CSS3, React.js, API, Axios]</span
+                [Typescript, React-Redux, Redux-Toolkit, React-Hooks, API, Axios]</span
               >
             </li>
             <li class="my-projects-item">
@@ -171,7 +171,7 @@
           height="354"
           left="40"
           top="80"
-          src='../src/images/photo_2023-05-05_20-43-45.jpg'
+          src='./img2.jpg'
           alt="my photo"
         />
         <!--contacts section-->
@@ -229,7 +229,7 @@
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Parcel</span>
+              <span class="tech-skills-item-text">Typescript</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Webpack</span>
