--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,8 @@
               Application for buying shoes, used react and redux
               <br />
               <span class="my-projects-bracket">
-                [Typescript, React-Redux, Redux-Toolkit, React-Hooks, API, Axios]</span
+                [Typescript, React-Redux, Redux-Toolkit, React-Hooks, API,
+                Axios]</span
               >
             </li>
             <li class="my-projects-item">
@@ -171,7 +172,7 @@
           height="354"
           left="40"
           top="80"
-          src='./img2.jpg'
+          src="./img2.jpg"
           alt="my photo"
         />
         <!--contacts section-->
@@ -183,9 +184,7 @@
             >
           </div>
           <div>
-            <a
-              class="contacts-section-link"
-              href="mailto:luckylionia@gmail.com"
+            <a class="contacts-section-link" href="mailto:luckylionia@gmail.com"
               >luckylionia@gmail.com</a
             >
           </div>
@@ -220,12 +219,6 @@
               <span class="tech-skills-item-text">GIT</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Scrum</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Agile</span>
-            </li>
-            <li class="tech-skills-item">
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
@@ -239,6 +232,12 @@
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Redux</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Node.js</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">MongoDB</span>
             </li>
           </ul>
         </div>
